# Barbot

./: .gitignore  CMakeLists.txt  DownloadProject.cmake  main.cpp
codebase/: LineDetection.cpp  LineDetection.h  LineFollow.cpp  LineFollow.h  Motor.cpp  Motor.h  Movement.cpp  Movement.h
codebase/ArduinoMotor/src/: PWMMotor.cpp  PWMMotor.h  main.cpp
codebase/BarBot/: Bluetooth.cpp  Bluetooth.h  CupDetection.cpp  CupDetection.h  LineDetection.cpp  LineDetection.h  LineFollow.cpp  LineFollow.h  Movement.cpp  Movement.h  PWM.cpp  PWM.h  PumpService.cpp  Pumps.cpp  Pumps.h  SocketConnection.cpp  SocketConnection.h  SpeechSynthesis.h  main.cpp
codebase/BarBot/API/: PumpService.cpp  PumpService.h  SocketConnection.cpp  SocketConnection.h
codebase/BarBot/Actors/: ArduinoMotor.cpp  ArduinoMotor.h  Movement.cpp  Movement.h  PWM.cpp  PWM.h  PWMMotor.cpp  PWMMotor.h
codebase/BarBot/Actors/PWM_Win/: PWM.cpp
codebase/BarBot/App/: Bluetooth.cpp  BluetoothConnection.cpp  BluetoothConnection.h  BluetoothConnection_Win.cpp  BluetoothSocket.cpp  BluetoothSocket.h  mainNotBlocking.cpp
codebase/BarBot/Communication/: SpeechSynthesis.cpp  SpeechSynthesis.h
codebase/BarBot/Communication/VoiceRecognition/: SpeechRecognition.cpp  SpeechRecognition.h  vr.py
codebase/BarBot/Events/: LineFollow.cpp  LineFollow.h
codebase/BarBot/Sensors/: CupDetection.cpp  CupDetection.h  LineDetection.cpp  LineDetection.h
codebase/BarBot/Util/: Logger.cpp  Logger.h
codebase/BarBot/Windows_Debug/: BluetoothConnection_Win.cpp  PWMMotor_win.cpp
codebase/Bluetooth/: BluetoothSocket.cpp  BluetoothSocket.h
codebase/Drink_Server/: drink_server.js  package.json
codebase/Drink_Server/public/: drinks.html  fluids.html  index.html  pour.html  pumps.html
codebase/GitInspector/: GitInspector_Check.cpp
codebase/HOERENPOMPEN/src/: PWMMotor.cpp  main.cpp
codebase/LCD_IPDisplay/: LCD_IPDisplay.cpp  LCD_Smiley.cpp  LCD_Smiley.h
codebase/NulVersie/: nulVersie.cpp
codebase/Pump_Board/: platformio.ini
codebase/Pump_Board/src/: APIConnection.cpp  APIConnection.h  PumpHandler.cpp  PumpHandler.h  main.cpp
docs/: Doxyfile.in
include/: BrickPi3.cpp  BrickPi3.h  DownloadRestCPP.cpp
include/BarBot/: BarBot.h
include/BarBot/Communication/: LCD_Smiley.h  SpeechRecognition.h  SpeechSynthesis.h
include/BarBot/Connectivity/: AppControlService.h  AppRequestService.h  BluetoothConnection.h  BluetoothSocket.h  DrinkService.h  SocketConnection.h
include/BarBot/Movement/: ArduinoMotor.h  Movement.h
include/BarBot/Scripts/: LineFollow.h  Pathing.h  SpeechInterpretation.h
include/BarBot/Sensors/: CupDetection.h  LineDetection.h
include/BarBot/Speech/: SpeechRecognition.h  SpeechSynthesis.h
include/BarBot/Util/: Logger.h
include/BrickPI3/: BrickPi3.h
include/BrickPI3/Raspi/: BrickPi3.cpp
include/BrickPI3/Windows/: BrickPi3.cpp
include/I2CLCD/: LCDTest.py  lcddriver.py  main.cpp
include/nIels2C/: nIels2C.cpp  nIels2C.h
lcd_leven/: lcd_display.cpp
lib/BarBot/: BarBot.cpp  main.cpp
lib/BarBot/Communication/: LCD_Smiley.cpp  SpeechRecognition.cpp  SpeechRecognition.windows.cpp  SpeechSynthesis.cpp
lib/BarBot/Connectivity/: AppControlService.cpp  AppControlService.windows.cpp  AppRequestService.cpp  BluetoothConnection.cpp  BluetoothConnection.windows.cpp  BluetoothSocket.cpp  DrinkService.cpp  PumpService.cpp  SocketConnection.cpp
lib/BarBot/Movement/: ArduinoMotor.cpp  ArduinoMotor.windows.cpp  Movement.cpp
lib/BarBot/Scripts/: LineFollow.cpp  Pathing.cpp  SpeechInterpretation.cpp
lib/BarBot/Sensors/: CupDetection.cpp  LineDetection.cpp
lib/BarBot/Util/: Logger.cpp
lib/Drink_Server/: drink_server.js  package-lock.json  package.json
lib/Drink_Server/public/: drinks.html  pumps.html
lib/GitInspector/: GitInspector_Check.cpp
lib/HOERENPOMPEN/src/: PWMMotor.h
lib/Pump_Board/: CMakeLists.txt
lib/Pump_Board/src/: APIConnection.h  PumpHandler.cpp  PumpHandler.h
lib/SpeechRecognition/: SpeechRecognition.py
lib/test/: motors.cpp
nulversie/: Sensori.cpp  arrow_keys.cpp  main.cpp  nulScript.cpp  nulTestScript.cpp  nulVersie.cpp  nulVersieBestuurbaar.cpp  rijdEenMeterScript.cpp  rijdMeterScript.cpp
